<?xml version='1.0' encoding='utf-8'?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">


	<parent>
		<artifactId>consultafeods</artifactId>
		<groupId>com.isban.javaapps.reporting</groupId>
		<version>1.0.0-SNAPSHOT</version>
	</parent>


	<modelVersion>4.0.0</modelVersion>
	<artifactId>example-api</artifactId>
	<packaging>war</packaging>

	<name>example-api</name>
	<url>http://maven.apache.org</url>


	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>https://raw.github.com/WASdev/tool.accelerate.core/master/LICENSE</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:git@github.com:WASdev/tool.accelerate.core.git</connection>
		<developerConnection>scm:git@github.com:WASdev/tool.accelerate.core.git</developerConnection>
		<url>git@github.com:WASdev/tool.accelerate.core.git</url>
	</scm>

	<repositories>
		<repository>
			<id>local-repo</id>
			<url>file://${project.basedir}//libs//</url>
		</repository>
	</repositories>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>


		<!-- NOT USED IN EMBEBBED -->
		<testServerHttpPort>9080</testServerHttpPort>
		<testServerHttpsPort>9443</testServerHttpsPort>
		<warContext>example-api</warContext>
		<packaging.type>usr</packaging.type>


		<!-- NEW -->
		<mockito.version>1.10.19</mockito.version>
		<log4j.version>2.11.1</log4j.version>
		<dbunit.version>2.5.4</dbunit.version>
		<spring-test-dbunit.version>1.3.0</spring-test-dbunit.version>

		<servlet.version>4.0.1</servlet.version>
		<cxf.version>3.1.1</cxf.version>
		<spring.version>4.3.20.RELEASE</spring.version>
		<spring-data-jpa.version>1.11.16.RELEASE</spring-data-jpa.version>
		<spring-ldap-core.version>2.3.2.RELEASE</spring-ldap-core.version>
		<jackson.version>2.9.6</jackson.version>

		<commons-lang.version>3.8.1</commons-lang.version>
		<commons-beanutils.version>1.9.3</commons-beanutils.version>
		<commonsio.version>2.4</commonsio.version>

		<org-postgresql-jdbc.version>42.2.5</org-postgresql-jdbc.version>
		<mariadb-jdbc.version>2.3.0</mariadb-jdbc.version>
		<commons-dbcp.version>2.4.0</commons-dbcp.version>

		<nimbus-jose-jwt.version>2.26.1</nimbus-jose-jwt.version>
		<aspectj.version>1.9.1</aspectj.version>
		<jsr250-api.version>1.0</jsr250-api.version>
		
		<hibernate.version>5.3.6.Final</hibernate.version>
		<hibernate-jpa-2.1-api.version>1.0.2.Final</hibernate-jpa-2.1-api.version>
		<hibernate-validator.version>6.0.13.Final</hibernate-validator.version>
		<!-- <ehcache.version>3.6.1</ehcache.version> <ehcache-region.version>5.3.6.Final</ehcache-region.version> -->
		<maven-assembly-plugin.version>2.6</maven-assembly-plugin.version>


		<checkstyle.version>8.14</checkstyle.version>
		<checkstyle-maven-plugin.version>3.0.0</checkstyle-maven-plugin.version>
		<maven-site-plugin.version>3.7.1</maven-site-plugin.version>
		<maven-project-info-reports-plugin.version>3.0.0</maven-project-info-reports-plugin.version>
		<sonar-maven-plugin.version>3.2</sonar-maven-plugin.version>
		<project.build.outputDirectory>/target/classes/</project.build.outputDirectory>
		<project.build.log.outputDirectory>/target/liberty-alt-output-dir/defaultServer/logs/</project.build.log.outputDirectory>
		
		<apache.poi.version>3.17</apache.poi.version>
	</properties>


	<profiles>
		<profile>
			<id>dev</id>
			<activation>
	            <activeByDefault>true</activeByDefault>
	        </activation>
			<properties>
				<packaging.type>runnable</packaging.type>
			</properties>
			<build>

				<finalName>${project.artifactId}</finalName>
				<plugins>
		
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-war-plugin</artifactId>
						<version>2.6</version>
						<configuration>
							<failOnMissingWebXml>false</failOnMissingWebXml>
							<packagingExcludes>pom.xml</packagingExcludes>
						</configuration>
					</plugin>
		
					<!-- EMBEBBED LIBERTY PLUGIN -->
					<plugin>
						<groupId>net.wasdev.wlp.maven.plugins</groupId>
						<artifactId>liberty-maven-plugin</artifactId>
						<extensions>true</extensions>
						<configuration>
							<assemblyArtifact>
								<groupId>com.ibm.websphere.appserver.runtime</groupId>
								<artifactId>wlp-webProfile8</artifactId>
								<version>18.0.0.3</version>
								<type>zip</type>
							</assemblyArtifact>
							<configFile>src/main/liberty/config/server.xml</configFile>
							<packageFile>${package.file}</packageFile>
							<include>${packaging.type}</include>
							<bootstrapProperties>
								<appContext>${warContext}</appContext>
								<default.http.port>${testServerHttpPort}</default.http.port>
								<default.https.port>${testServerHttpsPort}</default.https.port>
								<appLocation>${project.build.finalName}.war</appLocation>
							</bootstrapProperties>
						</configuration>
					</plugin>
		
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.22.0</version>
						<configuration>
							<useSystemClassLoader>false</useSystemClassLoader>
							<forkCount>3</forkCount>
							<reuseForks>true</reuseForks>
							<argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
						</configuration>
					</plugin>
		
				</plugins>
			</build>
		</profile>
		
		<profile>
			<id>prod</id>
			<properties>
				<packaging.type>runnable</packaging.type>
			</properties>
			<build>

				<finalName>${project.artifactId}</finalName>
				<plugins>
		
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-war-plugin</artifactId>
						<version>2.6</version>
						<configuration>
							<failOnMissingWebXml>false</failOnMissingWebXml>
							<packagingExcludes>pom.xml</packagingExcludes>
						</configuration>
					</plugin>
		
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.22.0</version>
						<configuration>
							<useSystemClassLoader>false</useSystemClassLoader>
							<forkCount>3</forkCount>
							<reuseForks>true</reuseForks>
							<argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
						</configuration>
					</plugin>
		
				</plugins>
			</build>
		</profile>
		
		
	</profiles>



	<dependencies>

		<!-- https://mvnrepository.com/artifact/oracle/ojdbc6 -->
		<dependency>
			<groupId>com.oracle</groupId>
			<artifactId>ojdbc6</artifactId>
			<version>11.2.0</version>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- Apache Log4j -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		
		 <dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-api</artifactId>
		    <version>1.7.5</version>
		</dependency>
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-simple</artifactId>
		    <version>1.7.5</version>
		</dependency>


		<!-- Servlet 3.1 Specification for Tomcat 8 -->
		<!-- <dependency> <groupId>javax.servlet</groupId> <artifactId>javax.servlet-api</artifactId> 
			<version>${servlet.version}</version> <scope>provided</scope> </dependency> -->

		<!-- Apache CXF -->
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-frontend-jaxrs</artifactId>
			<version>${cxf.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.geronimo.specs</groupId>
					<artifactId>geronimo-javamail_1.4_spec</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-rs-security-oauth2</artifactId>
			<version>${cxf.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.geronimo.specs</groupId>
					<artifactId>geronimo-servlet_3.0_spec</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- JSON Provider -->
		<dependency>
			<groupId>com.fasterxml.jackson.jaxrs</groupId>
			<artifactId>jackson-jaxrs-json-provider</artifactId>
			<version>${jackson.version}</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
			<version>${jackson.version}</version>
		</dependency>

		<!-- Spring Framework -->
		<!-- <dependency> <groupId>org.springframework</groupId> <artifactId>spring-web</artifactId> 
			</dependency> <dependency> <groupId>org.springframework</groupId> <artifactId>spring-test</artifactId> 
			<scope>test</scope> </dependency> -->
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-jpa</artifactId>
			<version>${spring-data-jpa.version}</version>
		</dependency>
		<!-- <dependency> <groupId>org.springframework</groupId> <artifactId>spring-aspects</artifactId> 
			</dependency> -->
		<!-- Spring LDAP => Para autenticar con Active Directory -->
		<dependency>
			<groupId>org.springframework.ldap</groupId>
			<artifactId>spring-ldap-core</artifactId>
			<version>${spring-ldap-core.version}</version>
		</dependency>

		<!-- AspectJ Tools -->
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjtools</artifactId>
			<version>${aspectj.version}</version>
		</dependency>

		<!-- Hibernate dependencies -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>${hibernate.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>${hibernate.version}</version>
		</dependency>


		<dependency>
			<groupId>javax.persistence</groupId>
			<artifactId>javax.persistence-api</artifactId>
			<version>2.2</version>
		</dependency>

		<!-- <dependency> <groupId>org.hibernate.javax.persistence</groupId> <artifactId>hibernate-jpa-2.1-api</artifactId> 
			<version>${hibernate-jpa-2.1-api.version}</version> </dependency> -->

		<!-- Hibernate Envers -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-envers</artifactId>
			<version>${hibernate.version}</version>
		</dependency>
		<!-- Hibernate Validators -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>${hibernate-validator.version}</version>
		</dependency>
		<!-- EhCache <dependency> <groupId>org.ehcache</groupId> <artifactId>ehcache</artifactId> 
			<version>${ehcache.version}</version> </dependency> <dependency> <groupId>org.hibernate</groupId> 
			<artifactId>hibernate-ehcache</artifactId> <version>${ehcache-region.version}</version> 
			</dependency> -->
		<!-- Apache Commons -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons-lang.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-dbcp2</artifactId>
			<version>${commons-dbcp.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>${commons-beanutils.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commonsio.version}</version>
		</dependency>

		<!-- Spring Test DBUnit to run DAO's test -->
		<dependency>
			<groupId>com.github.springtestdbunit</groupId>
			<artifactId>spring-test-dbunit</artifactId>
			<version>${spring-test-dbunit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.dbunit</groupId>
			<artifactId>dbunit</artifactId>
			<version>${dbunit.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- For JWT authentication -->
		<dependency>
			<groupId>com.nimbusds</groupId>
			<artifactId>nimbus-jose-jwt</artifactId>
			<version>${nimbus-jose-jwt.version}</version>
		</dependency>

		<!-- JSR250 API for @RolesAllowed annotation -->
		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>jsr250-api</artifactId>
			<version>${jsr250-api.version}</version>
		</dependency>

		<!-- Checkstyle -->
		<dependency>
			<groupId>com.puppycrawl.tools</groupId>
			<artifactId>checkstyle</artifactId>
			<version>${checkstyle.version}</version>
		</dependency>

		<!-- SonarQube -->
		<dependency>
			<groupId>org.sonarsource.scanner.maven</groupId>
			<artifactId>sonar-maven-plugin</artifactId>
			<version>${sonar-maven-plugin.version}</version>
		</dependency>

		<!-- Apache POI - Excel file generator -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>${apache.poi.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>${apache.poi.version}</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<!-- 
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-rs-client</artifactId>
			<version>3.1.1</version>
			<scope>test</scope>
		</dependency>
		 -->
		<dependency>
			<groupId>org.glassfish</groupId>
			<artifactId>javax.json</artifactId>
			<version>1.0.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<scope>provided</scope>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
		</dependency>
		<dependency>
			<groupId>aopalliance</groupId>
			<artifactId>aopalliance</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjrt</artifactId>
			<version>1.7.1</version>
		</dependency>
		<dependency>
			<groupId>javax.inject</groupId>
			<artifactId>javax.inject</artifactId>
			<version>1</version>
		</dependency>

		<dependency>
			<groupId>jstl</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-expression</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${spring.version}</version>
		</dependency>
	</dependencies>



	
</project>
